# nginx_yar_module

./: README.md  README.txt  config
ngx_yar/: .gitignore  CMakeLists.txt  yar.h  yar_client.c  yar_client.h  yar_method.c  yar_method.h  yar_protocol.c  yar_response.c
php_tests/: config.php  test1.php
src/: func_timeout_call.c  func_timeout_call.h  ngx-yar-module-ctx.h  ngx-yar-module-handler.c  ngx_yar_module_def.h  ngx_yar_module_handler.c  ngx_yar_module_handler.h  ngx_yar_module_impl.c  ngx_yar_module_impl.h
test/: .gitignore  CMakeLists.txt  yar_test_method.c
